Use viewport units for font-size

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 	background: #ff0000;
 	border-radius: 50vmin;
 	color: white;
-	font-size: 6em;
+	font-size: 22vmin;
 	border: 8px solid grey;
 	transition: all 0.1s;
 	cursor: pointer;
